<resources>
    <string name="app_name">Sound Mind</string>
    <string name="version">Версия 1.8</string>
    <string name="label_situation">Ситуация</string>
    <string name="label_emotions">Эмоции</string>
    <string name="label_thoughts">Мысли</string>
    <string name="label_action">Поведение</string>
    <string name="label_response">Адаптивный ответ</string>
    <string name="label_result">Результат</string>
    <string name="label_help">Помощь</string>
    <string name="label_help_new_note">Как сделать запись?</string>
    <string name="label_about">О приложении</string>
    <string name="label_mistakes">Когнитивные ошибки</string>
    <string name="label_positive">Что вы чувствуете?</string>
    <string name="label_settings">Настройки</string>
    <string name="label_license_agreement">License agreement</string>
    <string name="hint_situation">Кратко опишите произошедшее.</string>
    <string name="hint_emotions">Насколько сильно были выражены ваши эмоции?</string>
    <string name="hint_thoughts">О чем вы подумали? Насколько вы уверены в этом?</string>
    <string name="hint_action">Что вы сделали в данной ситуации? Как это повлияло на ваши чувства?</string>
    <string name="hint_response">Какие ошибки мышления вы могли допустить? Вопросы ниже помогут вам.</string>
    <string name="hint_result">Что вы теперь сделаете или уже сделали?\nВновь оцените интенсивность ваших чувств и убежденность в истинность мысли.\nНажмите на кнопку \"+ Эмоции\", чтобы добавить положительные эмоции.</string>
    <string name="hint_help">Нажмите на вопросительный знак, если вам нужна помощь</string>
    <string name="hint_create">Нажмите на большую оранжевую кнопку, чтобы сделать запись</string>
    <string name="hint_swipe">Перелистните страницу</string>
    <string name="help_situation">Кратко опишите произошедшее.</string>
    <string name="help_emotions">Насколько сильно были выражены ваши эмоции?</string>
    <string name="help_thoughts">О чем вы подумали? Насколько вы уверены в этом?</string>
    <string name="help_action">Что вы сделали в данной ситуации? Как это повлияло на ваши чувства?</string>
    <string name="help_response">Какие ошибки мышления вы могли допустить? Вопросы ниже помогут вам.</string>
    <string name="help_result">Что вы теперь сделаете или уже сделали?\nВновь оцените интенсивность ваших чувств и убежденность в истинность мысли.\nНажмите на кнопку \"+ Эмоции\", чтобы добавить положительные эмоции.</string>
    <string name="negative_emotion_hurt">Боль</string>
    <string name="negative_emotion_guilt">Вина</string>
    <string name="negative_emotion_anger">Гнев</string>
    <string name="negative_emotion_sadness">Грусть</string>
    <string name="negative_emotion_pity">Жалость</string>
    <string name="negative_emotion_spite">Злость</string>
    <string name="negative_emotion_injustice">Несправедливость</string>
    <string name="negative_emotion_insult">Обида</string>
    <string name="negative_emotion_despair">Отчаяние</string>
    <string name="button_next">Далее</string>
    <string name="button_tv_mistakes">Нажмите, чтобы посмотреть ошибки</string>
    <string name="button_mistakes">Ошибки</string>
    <string name="link_web">http://qualitasvita.com</string>
    <string name="help_1_what_title">Для чего это приложение?</string>
    <string name="help_1_what_text">Вы испытываете стресс, тревогу или страх, и это существенно снижает качество вашей жизни? Методы когнитивно-поведенческой терапии могут помочь вам, они имеют серьезную доказательную базу исследований.\n\nВ основе КПТ лежит "Когнитивная модель" - само событие не влияет на то, как мы себя чувствуем, на нас влияет то, что мы об этом событии думаем, т.е. образ нашего мышления. Соответственно, задача психотерапии изменить этот образ мышления, сделать его более рациональным и в конечном счёте эффективным.\n\nЭто приложение нацелено помочь вам понять ход ваших мыслей, выявить негативные и искажающие действительность мысли. Сделав запись, вы почувствуете себя лучше. Прокрутив ситуацию повторно, вы, вероятно, увидите всё под другим углом, в другом цвете. Не разочаровывайтесь, если уровень тревожности не падает. Потребуется время, чтобы овладеть необходимыми навыками.</string>
    <string name="help_2_when_title">Когда использовать это приложение?</string>
    <string name="help_2_when_text">Воспользуйтесь этим дневником, когда чувствуете тревогу, страх или подавленное состояние. Когда что-то произошло в вашей жизни, и вы не можете справиться с эмоциями.</string>
    <string name="help_3_how_title">Как сделать запись?</string>
    <string name="help_32_situation_title">1. Ситуация</string>
    <string name="help_32_situation_text">Кратко опишите какое реальное событие, размышление, фантазия или воспоминание вызвало неприятное переживание? Какие дискомфортные физические ощущения возникли при этом?</string>
    <string name="help_33_emotion_title">2. Негативные Эмоции</string>
    <string name="help_33_emotion_text">Какие чувства вы испытывали в тот момент? Оцените насколько сильным было каждое чувство по шкале от 0 до 100%.</string>
    <string name="help_34_thought_title">3. Автоматические Мысли</string>
    <string name="help_34_thought_text">Какая мысль или образы возникли при этом? Обязательно укажите, насколько сильно вы были убеждены в каждой из этих мыслей в тот момент.</string>
    <string name="help_35_action_title">4. Поведение</string>
    <string name="help_35_action_text">Опишите, как вы поступили в данной ситуации, что сделали? Как это повлияло на ваши чувства?</string>
    <string name="help_36_response_title">5. Адаптивный ответ</string>
    <string name="help_36_response_text">Какие ошибки мышления вы могли допустить? Изучите список самых распространнёных когнитивных искажений. Когда будете делать запись, прочитайте вспомогательные вопросы и постарайтесь ответить на них, это поможет сформировать альтернативные мысли.</string>
    <string name="help_37_result_title">6. Результат</string>
    <string name="help_37_result_text">Насколько вы убеждены в каждой автоматической мысли сейчас? Какие эмоции вы испытываете сейчас? Вновь оцените их интенсивность. Что вы теперь сделаете?</string>
    <string name="help_4_send_title">Поделитесь</string>
    <string name="help_4_send_text">Нажмите на кнопку отправить, чтобы поделиться переживанием со своим специалистом, используя удобный для вас способ. Именно помощь психолога поможет вам добиться успеха.</string>
    <string name="question_1">1. Каковы аргументы, подтверждающие истинность автоматической мысли? Каковы аргументы против?</string>
    <string name="question_2">2. Существует ли альтернативное объяснение происходящего?</string>
    <string name="question_3">3. Каков возможный наихудший исход? Смогу ли я это пережить? Каков возможный наилучший исход? Каков самый реалистичный исход?</string>
    <string name="question_4">4. Каковы последствия моей убежденности в данной автоматической мысли? Каковы могут быть последствия, если я изменю свою точку зрения?</string>
    <string name="question_5">5. Что мне следует сделать в связи с этим?</string>
    <string name="question_6">6. Если бы мой друг был в аналогичной ситуации, и к нему пришла бы такая же мысль, что бы я ему сказал?</string>
    <string name="mistake_0_text">Когнитивные искажения — это систематические ошибки в мышлении, поведении и восприятии ситуации. Предубеждения, стереотипы, эмоции и другие факторы могут стать причиной ловушки, в которую попадает мышление. Это мешает мыслить рационально, приводит к неточным суждениям, искажает восприятие действительности. Научно доказано существование нескольких десятков различных искажений. Ниже представлены лишь самые распространенные.</string>
    <string name="mistake_1_title">1. Дихотомическое мышление</string>
    <string name="mistake_1_text">Также называемое черно-белым мышлением, полярным или мышлением в стиле «все или ничего»: представление о том, что существуют только две категории для оценки событий, людей, поступков (черное-белое, плохое-хорошее). Отказ от оценки в континууме.\n\nПример: «Если я не добьюсь успеха во всем, то я неудачник».</string>
    <string name="mistake_2_title">2. Катастрофизация</string>
    <string name="mistake_2_text">Также называемая негативными предсказаниями: предсказание событий будущего исключительно негативно, без учета других, более вероятных исходов.\n\nПример: «Я так расстроюсь, что не смогу вообще ничего делать».</string>
    <string name="mistake_3_title">3. Обесценивание позитивного</string>
    <string name="mistake_3_text">Успехам, позитивному опыту и поступкам не придается значения.\n\nПример: «Действительно, мне удалось выполнить эту работу, но это вовсе не означает, что я способный, мне просто повезло».</string>
    <string name="mistake_4_title">4. Эмоциональное обоснование</string>
    <string name="mistake_4_text">Убеждение, что нечто должно быть правдой только потому, что вы «чувствуете» (по сути, верите) в это настолько сильно, что игнорируете или обесцениваете доказательства обратного.\n\nПример: «Я знаю, что мне многое удается на работе, но я по-прежнему чувствую себя неудачником».</string>
    <string name="mistake_5_title">5. Навешивание ярлыков</string>
    <string name="mistake_5_text">Наделение безусловными, глобальными характеристиками себя или окружающих, без учета того, что доказательства могут с большей вероятностью привести к менее негативным выводам.\n\nПример: «Я неудачник», «Он зануда».</string>
    <string name="mistake_6_title">6. Магнификация/минимизация</string>
    <string name="mistake_6_text">Оценивание себя, окружающих или ситуации с преувеличением негативного и/или преуменьшением позитивного.\n\nПример: «Средняя оценка говорит о том, что я неспособный. Оценка «отлично» не говорит о том, что я умный».</string>
    <string name="mistake_7_title">7. Мысленный фильтр</string>
    <string name="mistake_7_text">Избирательное абстрагирование: безосновательный учет только неудач, поражений или лишений, вместо полной картины всех событий.\n\nПример: «Один плохой результат по тесту (наряду с несколькими хорошими) свидетельствует о том, что я лентяй, который не мог как следует подготовиться».</string>
    <string name="mistake_8_title">8. Чтение мыслей</string>
    <string name="mistake_8_text">Уверенность человека в том, что он знает мысли окружающих, и отказ принимать во внимание другие, более вероятные возможности.\n\nПример: «Он думает, что я ничего не смыслю в этой работе».</string>
    <string name="mistake_9_title">9. Сверхгенерализация </string>
    <string name="mistake_9_text">Формулирование обобщающих негативных выводов, выходящих далеко за пределы текущей ситуации.\n\nПример: «Поскольку я чувствовал себя не в своей тарелке на встрече, я не умею знакомиться с людьми».</string>
    <string name="mistake_10_title">10. Персонализация</string>
    <string name="mistake_10_text">Представление о себе как о причине негативного поведения других людей без учета более вероятных объяснений их поведения. Уверенность человека в том, что его ошибки и просчеты находятся в центре внимания окружающих.\n\nПример: «Мастер по ремонту нагрубил мне, потому что я сделал что-то не так».</string>
    <string name="mistake_11_title">11. Долженствование</string>
    <string name="mistake_11_text">Мышление в стиле «я должен»: наличие четкой непреложной идеи о том, как должны вести себя другие люди или каким должно быть собственное поведение. Если ожидания не оправдываются, человек воспринимает это как неудачу.\n\nПример: «Ужасно, что я ошибся. Я должен во всем добиваться успеха».</string>
    <string name="mistake_12_title">12. Туннельное мышление</string>
    <string name="mistake_12_text">Акцент на негативных аспектах ситуации.\n\nПример: «Учитель моего сына ничего не может сделать правильно. Он постоянно критикует, не чувствует детей, и вообще он не состоялся как педагог».</string>
    <string name="background_mind_fullness">background_mind_fullness</string>
</resources>