<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MistakesActivity"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            style="@style/text_simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mistake_0_text" />

        <TextView
            style="@style/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mistake_1_title" />

        <TextView
            style="@style/text_simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mistake_1_text" />

        <TextView
            style="@style/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mistake_2_title" />

        <TextView
            style="@style/text_simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mistake_2_text" />

        <TextView
            style="@style/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mistake_3_title" />

        <TextView
            style="@style/text_simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mistake_3_text" />

        <TextView
            style="@style/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mistake_4_title" />

        <TextView
            style="@style/text_simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mistake_4_text" />

        <TextView
            style="@style/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mistake_5_title" />

        <TextView
            style="@style/text_simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mistake_5_text" />

        <TextView
            style="@style/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mistake_6_title" />

        <TextView
            style="@style/text_simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mistake_6_text" />

        <TextView
            style="@style/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mistake_7_title" />

        <TextView
            style="@style/text_simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mistake_7_text" />

        <TextView
            style="@style/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mistake_8_title" />

        <TextView
            style="@style/text_simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mistake_8_text" />

        <TextView
            style="@style/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mistake_9_title" />

        <TextView
            style="@style/text_simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mistake_9_text" />

        <TextView
            style="@style/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mistake_10_title" />

        <TextView
            style="@style/text_simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mistake_10_text" />

        <TextView
            style="@style/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mistake_11_title" />

        <TextView
            style="@style/text_simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mistake_11_text" />

        <TextView
            style="@style/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mistake_12_title" />

        <TextView
            style="@style/text_simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mistake_12_text"
            android:layout_marginBottom="24dp"/>


    </LinearLayout>
</ScrollView>