<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".fragments.Step5_ResponseFragment">

       <androidx.cardview.widget.CardView
        android:id="@+id/title_response"
        style="@style/title_card"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/text_title_card"
            android:text="@string/label_response" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnOpenMistakesActivity"
        style="@style/Style_Button_hint"
        android:layout_width="126dp"
        android:layout_height="36dp"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/button_mistakes"
        android:text="@string/button_mistakes"
        android:fontFamily="@font/neucha"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/response_root_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/colorCardBackground"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_response">

        <EditText
            android:id="@+id/response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:ems="10"
            android:fontFamily="@font/neucha"
            android:gravity="start|top"
            android:hint="@string/hint_response"
            android:importantForAutofill="no"
            android:inputType="textMultiLine|textCapSentences"
            android:maxLines="7"
            android:minLines="4"
            android:textColor="@color/colorTextPlain"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="68dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/response_root_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question_1"
                style="@style/text_plain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_1" />

            <TextView
                android:id="@+id/question_2"
                style="@style/text_plain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_2" />

            <TextView
                android:id="@+id/question_3"
                style="@style/text_plain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_3" />

            <TextView
                android:id="@+id/question_4"
                style="@style/text_plain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_4" />

            <TextView
                android:id="@+id/question_5"
                style="@style/text_plain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_5" />

            <TextView
                android:id="@+id/question_6"
                style="@style/text_plain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_6" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>